Fix Translator::resolveDuplicates()

The method was relying on undefined behavior by assuming that
the references to the items inside the list of messages did not
change even though entries were removed from the list.

Fix this by only remembering the duplicate indices and removing them
all in one go at the end.

Fixes: QTBUG-86507
Change-Id: I41995961945d513fe793b2cea99b78334e3c7425
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>